--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name": "kbase-ui-plugin-search",
-    "description": "New search",
+    "name": "kbase-ui-plugin-feeds",
+    "description": "Feeds UI",
     "keywords": [
         "kbase", "widget"
     ],
@@ -14,7 +14,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git://github.com/kbase/kbase-ui-plugin-search"
+        "url": "git://github.com/kbase/kbase-ui-plugin-feeds"
     },
     "dependencies": {
         "bluebird": "^3.0.0",
