add integration tests + minor iframe-related refactor

--- a/src/plugin/iframe_root/modules/config.yml
+++ b/src/plugin/iframe_root/modules/config.yml
@@ -9,21 +9,8 @@ source:
   styles:
     -
       file: feeds
-install:
-  widgets:
-    -
-      id: kb_feeds_panel
-      module: panel
-      type: factory
-  routes:
-    -
-      path: [feeds]
-      widget: kb_feeds_panel
-      authorization: true
-  menu:
-    -
-      name: feeds
-      definition:
-        path: feeds
-        label: Feeds
-        icon: bullhorn
+views:
+  -
+    module: panel
+    view: feeds
+    type: factory
